--- a/style.css
+++ b/style.css
@@ -74,34 +74,20 @@ input[type="text"]{
     width: 50%;
 }
 
-
-
-/* .color-selection {
-    width: 20%;
-    background-color: yellow;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;   
-}
-
-.color-front {
-    border-radius: 50%;
-    width: 50%;
-    aspect-ratio: 1/1;
-    background-color: #fff;
-    border: 1px solid black;
-}
-*/
-
 .color-front {
     border-radius: 50%;
     width: 100%;
     aspect-ratio: 1/1;
-    background-color: #fff;
     border: 2px solid #000;
     margin-bottom: 16px;
+}
+
+#color-front1{
+    background-color: #00ff00;
+}
+
+#color-front2 {
+    background-color: #ff0000;
 }
 
 input[type="color"]{
@@ -115,5 +101,6 @@ input[type="color"]{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: purple;
+    background-color: white;
+    border: 2px solid #000;
 }
