--- a/style.css
+++ b/style.css
@@ -18,15 +18,22 @@ body {
 }
 
 h1 {
+    font-size: 3rem;
+    color: #fff;
+    letter-spacing: 0.25rem;
+    text-shadow: #000 1px 0 10px;
     margin-bottom: 16px;
 }
 
 h2 {
+    color: #fff;
+    font-weight: normal;
+    text-shadow: #000 1px 0 10px;
     margin-bottom: 32px;
 }
 
 .background-gen {
-    background-color: red;
+    /* background-color: red; */
     width: 100%;
     height: 40vh;
     display: flex;
@@ -36,7 +43,7 @@ h2 {
 }
 
 .color-added {
-    background-color: yellow;
+    /* background-color: yellow; */
     width: 80%;
     display: flex;
     column-gap: 32px;
@@ -46,7 +53,7 @@ h2 {
 
 #colors {
     width: 100%;
-    background: blue;
+    /* background: blue; */
     display: grid;
     grid-auto-columns: 100px;
     grid-auto-flow: column;
@@ -55,7 +62,7 @@ h2 {
 }
 
 .color-selection {
-    background-color: orange;
+    /* background-color: orange; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -63,15 +70,28 @@ h2 {
 }
 
 .color-percent {
+    width: 75%;
     background-color: #fff;
+    border: 1px solid gray;
+    border-radius: 10px;
+    overflow: hidden;
+    
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 input[type="text"]{
-    background-color: gray;
-    width: 50%;
+    width: 75%;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+    border: none;
+    
+}
+
+.fa-percent{
+    font-size: 1rem;
 }
 
 .color-front {
@@ -84,10 +104,12 @@ input[type="text"]{
 
 #color-front1{
     background-color: #00ff00;
+    box-shadow: 1px 0 10px #555;
 }
 
 #color-front2 {
     background-color: #ff0000;
+    box-shadow: 1px 0 10px #555;
 }
 
 input[type="color"]{
@@ -101,6 +123,7 @@ input[type="color"]{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: #e7e7e7;;
+    box-shadow: 1px 0 10px #555;
     border: 2px solid #000;
 }
