--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h2 {
 
 /* Option for background Gen */
 .background-gen {
-    background-color: green;
+    /* background-color: green; */
     width: 100%;
     height: 40vh;
     display: flex;
@@ -48,7 +48,7 @@ h2 {
 
 /* Color wheel selection */
 .color-added {
-    background-color: yellow;
+    /* background-color: yellow; */
     width: 80%;
     display: flex;
     column-gap: 32px;
@@ -57,7 +57,7 @@ h2 {
 }
 
 #colors {
-    background: blue;
+    /* background: blue; */
     display: grid;
     grid-auto-columns: 100px;
     grid-auto-flow: column;
@@ -154,7 +154,6 @@ input[type="color"]{
 
 /* Gradient and degree selection */
 #gradient-class {
-    background-color: rebeccapurple;
     display: flex;
     flex-direction: column;
     justify-content: center;
