--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ h2 {
     margin-bottom: 32px;
 }
 
+h3 {
+    color: #000;
+    font-weight: normal;
+    opacity: 0.7;
+}
+
 
 /* Option for background Gen */
 .background-gen {
